Fixed build (JDK18, Boot 2.7): - upgraded dependencies (including paxtools, validator, etc. upgrades); - removed .json/.xml extension based content negotiation (users have to use "Accept" header or get default format); - migrated tests to junit5; - migrated Swagger2 to OpenApi (Swagger3);